Move Dialog Box translations to Translations files

--- a/usr/share/aat/Translations/DE.xml
+++ b/usr/share/aat/Translations/DE.xml
@@ -304,11 +304,74 @@
   <msg mid="_USERS_FILTER" value="Benutzerfilter" />
   <msg mid="_USERS_SERVER" value="Server des Benutzers" />
 
+	<msg mid="_DLG_DELETE_ALERT"
+    value="Wollen Sie wirklich den Alarm '%%arg1%%' loeschen ?" />
+  <msg mid="_DLG_DELETE_CONTACT"
+    value="Wollen Sie wirklich den Kontakt '%%arg1%%' loeschen ?" />
+  <msg mid="_DLG_DELETE_DEVICE"
+    value="Wollen Sie wirklich das Geraet '%%arg1%%' loeschen ?" />
+  <msg mid="_DLG_DELETE_DEVICEGROUP"
+    value="Wollen Sie wirklich die Geraetegruppe '%%arg1%%' loeschen ?" />
+	<msg mid="_DLG_DELETE_DEVICE_SERVICE"
+    value="Wollen Sie wirklich den Service '%%arg1%%' von Geraet '%%arg2%%' loeschen ?" />
+	<msg mid="_DLG_DELETE_LOCATION_BUILDING"
+    value="Wollen Sie wirklich Standort '%%arg1%%' Gebaeude '%%arg2%%' loeschen ?" />
+	<msg mid="_DLG_DELETE_LOCATION_CITY"
+    value="Wollen Sie wirklich Standort '%%arg1%%' loeschen ?" />
+  <msg mid="_DLG_DELETE_LOCATION_RACK"
+    value="Wollen Sie wirklich den Standort '%%arg1%%' Gebaeude '%%arg2%%' Raum '%%arg3%%' Rack '%%arg4%%' loeschen ?" />
+  <msg mid="_DLG_DELETE_LOCATION_ROOM"
+    value="Wollen Sie wirklich den Standort '%%arg1%%' Gebaeude '%%arg2%%' Raum '%%arg3%%' loeschen ?" />
+	<msg mid="_DLG_DELETE_LOG"
+    value="Wollen Sie wirklich diese Logzeile loeschen ?" />
+  <msg mid="_DLG_DELETE_LOG_MINUTE"
+    value="Wollen Sie wirklich die Log Datei %%datetime%% loeschen ?" />
+  <msg mid="_DLG_DELETE_MESSAGE"
+    value="Wollen Sie wirklich die Nachricht '%%msg%%' von Service '%%service%%' loeschen ?" />
+	<msg mid="_DLG_DELETE_REPORT"     
+		value="Wollen Sie wirklich den Bericht '%%arg1%%' loeschen ?" />
+  <msg mid="_DLG_DELETE_REPORT_DATA"
+    value="Wollen Sie wirklich Report '%%arg1%%' '%%arg2%%' loeschen ?" />
+	<msg mid="_DLG_DELETE_REPORT_MONTH"
+    value="_DLG_DELETE_REPORT_MONTH" />
+  <msg mid="_DLG_DELETE_REPORT_SCHEDULE"
+    value="Wollen Sie wirklich die Berichts-Zeitplanung '%%arg1%%' loeschen ?" />
+  <msg mid="_DLG_DELETE_SERVICE"
+    value="Wollen Sie wirklich den Service '%%arg1%%' loeschen ?" />
+  <msg mid="_DLG_DELETE_SERVICEGROUP"
+    value="_DLG_DELETE_SERVICEGROUP" />   
+	<msg mid="_DLG_DELETE_SERVICEGROUP_SERVICE"
+    value="_DLG_DELETE_SERVICEGROUP_SERVICE" />	
+	<msg mid="_DLG_DELETE_STATISTIC_REPORT"
+    value="Wollen Sie wirklich die Statistik '%%arg1%%' loeschen ?" />
+  <msg mid="_DLG_DELETE_STATISTIC_REPORT_SCHEDULE"
+    value="Wollen Sie wirklich den Zeitplan '%%arg1%%' der Statistikberichte loeschen ?" />
+  <msg mid="_DLG_DELETE_STORAGE"     
+		value="_DLG_DELETE_STORAGE" />
+  <msg mid="_DLG_DELETE_TABLE"
+    value="Wollen Sie wirklich Tabelle '%%arg1%%' loeschen ?" />
+	<msg mid="_DLG_DELETE_TIMEPERIOD"
+    value="Wollen Sie wirklich den Zeitabschnitt '%%arg1%%' loeschen ?" />
+  <msg mid="_DLG_DELETE_USER"
+    value="Wollen Sie wirklich den Benutzer '%%arg1%%' loeschen ?" />
+  <msg mid="_DLG_LOGOUT"
+    value="Wollen Sie sich wirklich abmelden ?" />
+  <msg mid="_DLG_PARSE_PAUSE"
+    value="Wollen Sie wirklich das Analysieren der Maschine '%%arg1%%' unterbrechen ?" />
+  <msg mid="_DLG_PARSE_START"
+    value="Wollen Sie wirklich die Analyse der Maschine '%%arg1%%' starten ?" />
+  <msg mid="_DLG_PARSE_STOP"
+    value="Wollen Sie wirklich die Analyse der Maschine '%%arg1%%' stoppen ?" />
+	<msg mid="_DLG_RESTORE_CONFIG"
+    value="_DLG_RESTORE_CONFIG" />
+
 	<msg mid="_MSG_ALERT_RAISED_ONLY"
     value="_MSG_ALERT_RAISED_ONLY" />
 	<msg mid="_MSG_CHECK_UPDATES"
 		value="Suche Updates" />
-	 <msg mid="_MSG_CONTACT_ALREADY_EXIST"
+	<msg mid="_MSG_CONFIG_RESTORED"
+    value="_MSG_CONFIG_RESTORED %s" />
+	<msg mid="_MSG_CONTACT_ALREADY_EXIST"
     value="Kontakt besteht bereits !" />
 	<msg mid="_MSG_CONTACT_INFO_INVALID"
     value="Kontaktinformationen bentigen mindestens die ID und Email/IM !" />
