--- a/usr/share/aat/Translations/EN.xml
+++ b/usr/share/aat/Translations/EN.xml
@@ -305,10 +305,71 @@
   <msg mid="_USERS_FILTER" value="Users Filter" />
   <msg mid="_USERS_SERVER" value="Users Server" />
 
+	<msg mid="_DLG_DELETE_ALERT"
+		value="Do you really want to delete Alert '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_CONTACT"
+    value="Do you really want to delete Contact '%%arg1%%' ?" />		
+	<msg mid="_DLG_DELETE_DEVICE"
+    value="Do you really want to delete Device '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_DEVICEGROUP"
+    value="Do you really want to delete Device Group '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_DEVICE_SERVICE"
+    value="Do you really want to delete Service '%%arg1%%' from Device '%%arg2%%' ?" />
+	<msg mid="_DLG_DELETE_LOCATION_BUILDING"
+    value="Do you really want to delete Location City '%%arg1%%' Building '%%arg2%%' ?" />
+	<msg mid="_DLG_DELETE_LOCATION_CITY"
+    value="Do you really want to delete Location City '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_LOCATION_RACK"
+    value="Do you really want to delete Location City '%%arg1%%' Building '%%arg2%%' Room '%%arg3%%' Rack '%%arg4%%' ?" />
+	<msg mid="_DLG_DELETE_LOCATION_ROOM"
+    value="Do you really want to delete Location City '%%arg1%%' Building '%%arg2%%' Room '%%arg3%%' ?" />
+	<msg mid="_DLG_DELETE_LOG"
+    value="Do you really want to delete this Log line #%%log%% ?" />
+	<msg mid="_DLG_DELETE_LOG_MINUTE"
+    value="Do you really want to delete this Log File %%datetime%% ?" />
+	<msg mid="_DLG_DELETE_MESSAGE"
+    value="Do you really want to delete Message '%%msg%%' from Service '%%service%%' ?" />
+	<msg mid="_DLG_DELETE_REPORT"
+    value="Do you really want to delete Report '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_REPORT_DATA"     
+		value="Do you really want to delete Report '%%arg1%%' '%%arg2%%' ?" />
+	<msg mid="_DLG_DELETE_REPORT_MONTH"     
+		value="Do you really want to delete Report Month '%%arg1%%' '%%arg2%% %%arg3%%' ?" />
+	<msg mid="_DLG_DELETE_REPORT_SCHEDULE"     
+		value="Do you really want to delete Report Schedule '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_SERVICE"
+    value="Do you really want to delete Service '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_SERVICEGROUP"
+    value="Do you really want to delete Service Group '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_SERVICEGROUP_SERVICE"
+    value="Do you really want to delete Service '%%arg2%%' from Service Group '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_STATISTIC_REPORT"
+    value="Do you really want to delete Statistic Report '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_STATISTIC_REPORT_SCHEDULE"
+    value="Do you really want to delete Statistic Report Schedule '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_STORAGE"
+    value="Do you really want to delete Storage '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_TABLE"
+    value="Do you really want to delete Table '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_TIMEPERIOD"
+    value="Do you really want to delete TimePeriod '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_USER"
+    value="Do you really want to delete User '%%arg1%%' ?" />	
+	<msg mid="_DLG_LOGOUT"
+    value="Do you really want to logout ?" />
+	<msg mid="_DLG_PARSE_PAUSE"
+    value="Do you really want to pause parsing Device '%%arg1%%' ?" />
+	<msg mid="_DLG_PARSE_START"
+    value="Do you really want to start parsing Device '%%arg1%%' ?" />
+  <msg mid="_DLG_PARSE_STOP"
+    value="Do you really want to stop parsing Device '%%arg1%%' ?" />
+
   <msg mid="_MSG_ALERT_RAISED_ONLY"
     value="Alert will be raised only if we match n Times in less than d Seconds in one Device" />
   <msg mid="_MSG_CHECK_UPDATES"
     value="Check for Updates" />
+	<msg mid="_MSG_CONFIG_RESTORED"
+    value="Configuration restored from file '%s'" />
   <msg mid="_MSG_CONTACT_ALREADY_EXIST"
     value="Contact already exists !" />
   <msg mid="_MSG_CONTACT_INFO_INVALID"
