--- a/usr/share/aat/Translations/ES.xml
+++ b/usr/share/aat/Translations/ES.xml
@@ -302,10 +302,71 @@
   <msg mid="_USERS_FILTER" value="Filtro de Usuarios" />
   <msg mid="_USERS_SERVER" value="Servidor de Usuarios" />
 
+	<msg mid="_DLG_DELETE_ALERT"
+    value="Estas seguro de que quieres borrar la Alerta '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_CONTACT"
+    value="Estas seguro de que quieres borrar el Contacto '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_DEVICE"
+    value="Estas seguro de que quieres borrar el Equipo '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_DEVICEGROUP"
+    value="Estas seguro de que quieres borrar el Grupo de Equipos '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_DEVICE_SERVICE"
+    value="Estas seguro de que quieres borrar el Servicio '%%arg1%%' del Equipo '%%arg2%%' ?" />
+	<msg mid="_DLG_DELETE_LOCATION_BUILDING"
+    value="Estas seguro de que quieres borrar la Ciudad '%%arg1%%' Edificio '%%arg2%%' ?" />
+	<msg mid="_DLG_DELETE_LOCATION_CITY"
+    value="Estas seguro de que quieres borrar la Ciudad '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_LOCATION_RACK"
+    value="Estas seguro de que quieres borrar la Ciudad '%%arg1%%' Edificio '%%arg2%%' Habitacion '%%arg3%%' Rack '%%arg4%%' ?" />
+  <msg mid="_DLG_DELETE_LOCATION_ROOM"
+    value="Estas seguro de que quieres borrar la Ciudad '%%arg1%%' Edificio '%%arg2%%' Habitacion '%%arg3%%' ?" />
+	<msg mid="_DLG_DELETE_LOG"
+    value="Estas seguro de que quieres borrar la linea de Log #%%log%% ?" />
+  <msg mid="_DLG_DELETE_LOG_MINUTE"
+    value="Estas seguro de que quieres borrar el Fichero de Log #%%datetime%% ?" />
+  <msg mid="_DLG_DELETE_MESSAGE"
+    value="Estas seguro de que quieres borrar el Mensaje '%%msg%%' del Servicio '%%service%%' ?" />
+	<msg mid="_DLG_DELETE_REPORT"
+		value="Estas seguro de que quieres borrar el Informe '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_REPORT_DATA"
+    value="Estas seguro de que quieres borrar el Informe '%%arg1%%' '%%arg2%%' ?" />   
+	<msg mid="_DLG_DELETE_REPORT_MONTH"
+    value="_DLG_DELETE_REPORT_MONTH" />
+  <msg mid="_DLG_DELETE_REPORT_SCHEDULE"
+    value="Estas seguro de que quieres borrar la planificacion del Informe '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_SERVICE"
+    value="Estas seguro de que quieres borrar el Servicio '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_SERVICEGROUP"
+    value="Estas seguro de que quieres borrar el Grupo de Servicios '%%arg1%%' ?" />   
+	<msg mid="_DLG_DELETE_SERVICEGROUP_SERVICE"
+    value="_DLG_DELETE_SERVICEGROUP_SERVICE" />	
+	<msg mid="_DLG_DELETE_STATISTIC_REPORT"
+    value="Estas seguro de que quieres borrar el Informe Estadistico '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_STATISTIC_REPORT_SCHEDULE"
+    value="Estas seguro de que quiere borrar la planificación del Informe Esatdistico '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_STORAGE"
+		value="_DLG_DELETE_STORAGE" />
+  <msg mid="_DLG_DELETE_TABLE"
+    value="Estas seguro de que quieres borrar la Tabla '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_TIMEPERIOD"
+    value="Estas seguro de que quieres borrar el Periodo de Tiempo '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_USER"
+    value="Estas seguro de que quieres borrar al Usuario '%%arg1%%' ?" />
+  <msg mid="_DLG_LOGOUT"
+    value="Estas seguro de que quieres desconectar ?" />
+  <msg mid="_DLG_PARSE_PAUSE"
+    value="Estas seguro de que quieres pausar el analisis del Equipo '%%arg1%%' ?" />
+  <msg mid="_DLG_PARSE_START"
+    value="Estas seguro de que quieres comenzar a analizar el Equipo '%%arg1%%' ?" />  
+	<msg mid="_DLG_PARSE_STOP"
+    value="Estas seguro de que quieres dejar de analizar el Equipo '%%arg1%%' ?" />
+	
 	<msg mid="_MSG_ALERT_RAISED_ONLY"
     value="_MSG_ALERT_RAISED_ONLY" />
 	<msg mid="_MSG_CHECK_UPDATES"
 		value="Buscar Actualizaciones" />
+	<msg mid="_MSG_CONFIG_RESTORED"
+    value="_MSG_CONFIG_RESTORED %s" />
 	<msg mid="_MSG_CONTACT_ALREADY_EXIST"
     value="El Contacto ya existe !" />
 	<msg mid="_MSG_CONTACT_INFO_INVALID"
