--- a/usr/share/aat/Translations/FR.xml
+++ b/usr/share/aat/Translations/FR.xml
@@ -304,10 +304,72 @@
   <msg mid="_USERS_FILTER" value="Filtre Utilisateurs" />
   <msg mid="_USERS_SERVER" value="Serveur Utilisateurs" />
 
+	<msg mid="_DLG_DELETE_ALERT"
+    value="Voulez vous vraiment supprimer l'Alerte '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_CONTACT"
+    value="Voulez vous vraiment supprimer le Contact '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_DEVICE"
+    value="Voulez vous vraiment supprimer la Machine '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_DEVICEGROUP"
+    value="Voulez vous vraiment supprimer le Groupe d'Equipements '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_DEVICE_SERVICE"
+    value="Voulez vous vraiment supprimer le Service '%%arg1%%' de la Machine '%%arg2%%' ?" />
+	<msg mid="_DLG_DELETE_LOCATION_BUILDING"
+    value="Voulez vous vraiment supprimer la Location Ville '%%arg1%%' Batiment '%%arg2%%' ?" />
+	<msg mid="_DLG_DELETE_LOCATION_CITY"
+    value="Voulez vous vraiment supprimer la Location Ville '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_LOCATION_RACK"
+    value="Voulez vous vraiment supprimer la Location Ville '%%arg1%%' Batiment '%%arg2%%' Salle '%%arg3%%' Rack '%%arg4%%'?" />
+  <msg mid="_DLG_DELETE_LOCATION_ROOM"
+    value="Voulez vous vraiment supprimer la Location Ville '%%arg1%%' Batiment '%%arg2%%' Salle '%%arg3%%' ?" />
+	<msg mid="_DLG_DELETE_LOG"
+    value="Voulez vous vraiment supprimer la ligne de Log #%%log%% ?" />
+  <msg mid="_DLG_DELETE_LOG_MINUTE"
+    value="Voulez vous vraiment supprimer le fichier de Log %%datetime%% ?" />
+  <msg mid="_DLG_DELETE_MESSAGE"
+    value="Voulez vous vraiment supprimer le Message '%%msg%%' du Service '%%service%%' ?" />
+	<msg mid="_DLG_DELETE_REPORT"
+		value="Voulez vous vraiment supprimer le Rapport '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_REPORT_DATA"
+    value="Voulez vous vraiment supprimer le Rapport '%%arg1%%' '%%arg2%%' ?" />	<msg mid="_DLG_DELETE_REPORT_MONTH"
+    value="Voulez vous vraiment supprimer le Mois de Rapport '%%arg1%%' '%%arg2%% %%arg3%%' ?" />
+  <msg mid="_DLG_DELETE_REPORT_SCHEDULE"
+    value="Voulez vous vraiment supprimer la planification du Rapport '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_SERVICE"
+    value="Voulez vous vraiment supprimer le Service '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_SERVICEGROUP"
+    value="Voulez vous vraiment supprimer le Groupe de Services '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_SERVICEGROUP_SERVICE"
+    value="Voulez vous vraiment supprimer le Service '%%arg2%%' du Groupe de Services '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_STATISTIC_REPORT"
+    value="Voulez vous vraiment supprimer le Rapport Statistique '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_STATISTIC_REPORT_SCHEDULE"
+    value="Voulez vous vraiment supprimer la Planification du Rapport Statistique '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_STORAGE"
+    value="Voulez vous vraiment supprimer le Stockage '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_TABLE"
+    value="Voulez vous vraiment supprimer la Table '%%arg1%%' ?" />
+	<msg mid="_DLG_DELETE_TIMEPERIOD"
+    value="Voulez vous vraiment supprimer la Periode '%%arg1%%' ?" />
+  <msg mid="_DLG_DELETE_USER"
+    value="Voulez vous vraiment supprimer l'Utilisateur '%%arg1%%' ?" />
+  <msg mid="_DLG_LOGOUT"
+    value="Voulez vous vraiment vous deconnecter ?" />
+  <msg mid="_DLG_PARSE_PAUSE"
+    value="Voulez vous vraiment mettre en pause le parseur de la Machine '%%arg1%%' ?" />
+  <msg mid="_DLG_PARSE_START"
+    value="Voulez vous vraiment demarrer le parseur de la Machine '%%arg1%%' ?" />
+  <msg mid="_DLG_PARSE_STOP"
+		value="Voulez vous vraiment arreter le parseur de la Machine '%%arg1%%' ?" />
+	<msg mid="_DLG_RESTORE_CONFIG"
+    value="Voulez vous vraiment restaurer la configuration a partir du fichier '%%arg1%%' ?" />
+	
 	<msg mid="_MSG_ALERT_RAISED_ONLY"
     value="Alerte remontée seulement si on reconnait n Fois en moins de d Secondes pour un Equipement" />
 	<msg mid="_MSG_CHECK_UPDATES"
     value="Vérifier les mises à jour" />
+	<msg mid="_MSG_CONFIG_RESTORED"
+		value="Configuration restaurée à partir du fichier '%s'" />
 	<msg mid="_MSG_CONTACT_ALREADY_EXIST"
     value="Contact déjà existant !" />
 	<msg mid="_MSG_CONTACT_INFO_INVALID"
