--- a/usr/share/aat/Translations/ES.xml
+++ b/usr/share/aat/Translations/ES.xml
@@ -70,6 +70,7 @@
 	<msg mid="_BINARY" value="Binario" />
 	<msg mid="_BODY" value="Cuerpo del Mensaje" />
 	<msg mid="_BUG_REPORT" value="Informar de Bugs" />
+	<msg mid="_BYTES" value="_BYTES" />
 	<msg mid="_CANCEL" value="Cancelar" />
   <msg mid="_CERTIFICATE" value="_CERTIFICATE" />
 	<msg mid="_COMMON_NAME" value="_COMMON_NAME" />
