--- a/usr/share/aat/Translations/DE.xml
+++ b/usr/share/aat/Translations/DE.xml
@@ -186,6 +186,7 @@
   <msg mid="_DIR_UNKNOWN_LOGS" value="_DIR_UNKNOWN_LOGS" />
 	<msg mid="_DOWNLOAD_CSV_FILE" value="Download CSV Datei" />
   <msg mid="_DOWNLOAD_FILE" value="Download Datei" />
+	<msg mid="_DOWNLOAD_ZIP_FILE" value="Download ZIP Datei" />
 	<msg mid="_DURATION_D" value="_DURATION_D" />	
 	<msg mid="_FINISH_PERIOD" value="_FINISH_PERIOD" />
 	<msg mid="_GET_LOGS" value="_GET_LOGS" />
