--- a/usr/share/aat/Translations/PT.xml
+++ b/usr/share/aat/Translations/PT.xml
@@ -185,8 +185,9 @@
 	<msg mid="_DIR_INCOMING_LOGS" value="_DIR_INCOMING_LOGS" />
   <msg mid="_DIR_KNOWN_LOGS" value="_DIR_KNOWN_LOGS" />
   <msg mid="_DIR_UNKNOWN_LOGS" value="_DIR_UNKNOWN_LOGS" />
-	<msg mid="_DOWNLOAD_CSV_FILE" value="Download do Arquivo CSV " />
+	<msg mid="_DOWNLOAD_CSV_FILE" value="Download do Arquivo CSV" />
 	<msg mid="_DOWNLOAD_FILE" value="Download do Arquivo" />
+	<msg mid="_DOWNLOAD_ZIP_FILE" value="Download do Arquivo ZIP" />
 	<msg mid="_DURATION_D" value="_DURATION_D" />
 	<msg mid="_FINISH_PERIOD" value="_FINISH_PERIOD" />
 	<msg mid="_GET_LOGS" value="Coletar Logs" />
