--- a/usr/share/aat/Translations/ES.xml
+++ b/usr/share/aat/Translations/ES.xml
@@ -155,6 +155,7 @@
 
 	<msg mid="_ADD_NEW_SERVICE" value="_ADD_NEW_SERVICE" />
 	<msg mid="_ADD_SERVICE_TO_DEVICE" value="_ADD_SERVICE_TO_DEVICE" />
+	<msg mid="_ADD_SERVICE_TO_SERVICEGROUP" value="_ADD_SERVICE_TO_SERVICEGROUP" />
 	<msg mid="_ALERT" value="Alarma" />
   <msg mid="_ALERT_DESCRIPTION" value="_ALERT_DESCRIPTION" />
   <msg mid="_ALERT_LEVEL" value="Nivel de Alerta" />
@@ -234,7 +235,8 @@
 	<msg mid="_NEW_REPORT" value="Nuevo Informe" />
 	<msg mid="_NEW_ROOM" value="Nueva Sala" />
   <msg mid="_NEW_SERVICE" value="Nuevo Servicio" />
-	<msg mid="_NEW_STATIC_DEVICEGROUP" value="New Static DeviceGroup" />
+	<msg mid="_NEW_SERVICEGROUP" value="_NEW_SERVICEGROUP" />
+	<msg mid="_NEW_STATIC_DEVICEGROUP" value="_NEW_STATIC_DEVICEGROUP" />
   <msg mid="_NEW_TABLE" value="Nueva Tabla" />
 	<msg mid="_NEW_TIMEPERIOD" value="Nuevo Periodo de Tiempo" />
 	<msg mid="_NEW_USER" value="Nuevo Usuario" />
