--- a/usr/share/aat/Translations/PT.xml
+++ b/usr/share/aat/Translations/PT.xml
@@ -285,7 +285,9 @@
 	<msg mid="_SCHEDULE" value="Agendar" />
 	<msg mid="_SCHEDULE_REPORT" value="Relatório de Agenda" />
 	<msg mid="_SCHEDULER" value="Agenda" />	
+	<msg mid="_SEARCH_TEMPLATES" value="_SEARCH_TEMPLATES" />
 	<msg mid="_SELECT_THIS_MSG" value="Selecionar esta Mensagem" />
+	<msg mid="_SELECTION" value="_SELECTION" />
 	<msg mid="_SENDER" value="Sender" />
 	<msg mid="_SERVER" value="Servidor" />
 	<msg mid="_SERVICE" value="Serviço" />
